--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "basic-auth-client-jest-starter",
+  "name": "basic-auth-rest-client-jest-starter",
   "version": "1.0.0",
-  "description": "basic-auth-client-jest-starter",
+  "description": "basic-auth-rest-client-jest-starter",
   "main": "client.js",
   "scripts": {
     "start:server": "node server.js",
@@ -12,6 +12,7 @@
     "express",
     "jest",
     "node",
+    "rest",
     "softspiders",
     "starter",
     "template"
